--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "sass": "^1.32.7",
     "typescript": "^4.1.5",
     "web-vitals": "^1.0.1",
