--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,22 @@
+anyio==3.4.0
 asgiref==3.4.1
 bidict==0.21.4
 click==8.0.3
+cloudpickle==2.0.0
+fastapi==0.70.0
 h11==0.12.0
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.21.4
+pydantic==1.8.2
 python-engineio==4.3.0
+sniffio==1.2.0
+starlette==0.16.0
 tqdm==4.62.3
+typing_extensions==4.0.1
 uvicorn==0.15.0
+websocket-client==1.2.1
 websocket-server==0.6.2
+Werkzeug==2.0.2
