--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,12 +10,16 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 numpy==1.21.4
+pandas==1.3.5
 pydantic==1.8.2
+python-dateutil==2.8.2
 python-engineio==4.3.0
+pytz==2021.3
+six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
 tqdm==4.62.3
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 uvicorn==0.15.0
 websocket-client==1.2.1
 websocket-server==0.6.2
