--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 numpy==1.21.4
 pandas==1.3.5
+psutil==5.8.0
 pydantic==1.8.2
 python-dateutil==2.8.2
 python-engineio==4.3.0
